--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="./index.css">
-
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <title>Porftolio</title>
 </head>
 <body>
-    <nav class="navbar justify-content-between" id="navbar">
+
+    <div class="gradient-color">
+    <nav class="navbar justify-content-between sticky-top" id="navbar">
         <span class="navbar-brand"><img id="leopard-brand" src="./assets/leopard.png"></span>
         <div class="navbar-links">
             <ul>
@@ -36,19 +37,61 @@
             </ul>
         </div>
     </nav>
+    
 
-    <main>
-        <h1>Hello</h1>
-    </main>
+    <section class="intro">
+        <div class="main-title">
+            <h1>Cristina Cruz</h1>
+        </div>
 
-    <section></section>
+        <div class="main-title">
+            <p>Developer</p>
+        </div>
 
-    <section></section>
+        <div class="main-title">
+            <i class="bi bi-chevron-double-down"></i>
+        </div>
+    </section>
 
-    <section></section>
+    </div>
 
-    <section></section>
+    <section>
+    </section>
 
-    <footer></footer>
+    <section>k</section>
+
+    <section>k</section>
+
+    <section>k</section>
+
+    <footer>k</footer>
+
+    <section>k</section>
+
+    <section>k</section>
+
+    <section>k</section>
+
+    <footer>k</footer>    <section>k</section>
+
+    <section>k</section>
+
+    <section>k</section>
+
+    <footer>k</footer>    <section>k</section>
+
+    <section>k</section>
+
+    <section>k</section>
+
+    <footer>k</footer>    <section>k</section>
+
+    <section>k</section>
+
+    <section>k</section>
+
+    <footer>k</footer>
+
+    <script src="./index.js"></script>
 </body>
 </html>
