--- a/index.html
+++ b/index.html
@@ -1,64 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="./index.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./index.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
 
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <title>Porftolio</title>
-</head>
-<body>
+  </head>
+  <body>
 
-    <div class="gradient-color">
-    <nav class="navbar justify-content-between sticky-top" id="navbar">
-        <span class="navbar-brand"><img id="leopard-brand" src="./assets/leopard.png"></span>
+
+    <header class="sticky-top">
+      <nav class="navbar justify-content-between " id="navbar">
+        <span class="navbar-brand"
+          ><img id="leopard-brand" src="./assets/leopard.png"
+        /></span>
         <div class="navbar-links">
-            <ul>
-                <li class="m-3">
-                    <a href="">About</a>
-                </li>
-
-                <li class="m-3">
-                    <a href="">Resume</a>
-                </li>
-
-                <li class="m-3">
-                    <a href="">Projects</a>
-                </li>
-
-                <li class="m-3">
-                    <a href="">Photography</a>
-                </li>
-
-            </ul>
+          <ul>
+            <li class="m-3">
+              <a href="#about-section">About</a>
+            </li>
+  
+            <li class="m-3">
+              <a href="">Resume</a>
+            </li>
+  
+            <li class="m-3">
+              <a href="">Projects</a>
+            </li>
+  
+            <li class="m-3">
+              <a href="">Photography</a>
+            </li>
+          </ul>
         </div>
-    </nav>
-    
+      </nav>
+    </header>
 
-    <section class="intro">
-        <div class="main-title">
-            <h1>Cristina Cruz</h1>
-        </div>
 
+      <section class="intro">
         <div class="main-title">
-            <p>Developer</p>
+          <h1>Cristina Cruz</h1>
         </div>
 
         <div class="main-title">
-            <i class="bi bi-chevron-double-down"></i>
+          <p>Developer</p>
         </div>
+
+        <div class="main-title">
+          <i class="bi bi-chevron-double-down"></i>
+        </div>
+      </section>
+   
+
+    <section id="about-section">
+      <h2 class="subtitle">About me</h2>
+      <div id="introducing-text">
+        <p>
+          I am an enthusiastic developer with deep interest in the use of agile
+          methodologies to accomplish needs of end-users in product's
+          development. I like to contribute to doing things better and useful. I graduated in Applied Mathematics and Computer Science and I have
+          over 2 years of experience. 
+          <br />
+          Besides my passion for technology and science, I like getting to know new places
+          and taking photos.
+        </p>
+      </div>
     </section>
 
-    </div>
-
-    <section>
-    </section>
-
-    <section>k</section>
+    <section class="portfolio-sections"></section>
 
     <section>k</section>
 
@@ -72,19 +94,22 @@
 
     <section>k</section>
 
-    <footer>k</footer>    <section>k</section>
-
+    <footer>k</footer>
     <section>k</section>
-
-    <section>k</section>
-
-    <footer>k</footer>    <section>k</section>
 
     <section>k</section>
 
     <section>k</section>
 
-    <footer>k</footer>    <section>k</section>
+    <footer>k</footer>
+    <section>k</section>
+
+    <section>k</section>
+
+    <section>k</section>
+
+    <footer>k</footer>
+    <section>k</section>
 
     <section>k</section>
 
@@ -93,5 +118,5 @@
     <footer>k</footer>
 
     <script src="./index.js"></script>
-</body>
+  </body>
 </html>
