--- a/index.html
+++ b/index.html
@@ -20,27 +20,25 @@
     <title>Porftolio</title>
   </head>
   <body>
-
-
     <header class="sticky-top">
-      <nav class="navbar justify-content-between " id="navbar">
-        <span class="navbar-brand"
-          ><img id="leopard-brand" src="./assets/leopard.png"
-        /></span>
+      <nav class="navbar justify-content-between" id="navbar">
+        <span class="navbar-brand">
+          <!-- <img id="leopard-brand" src="./assets/leopard.png"/> -->
+        </span>
         <div class="navbar-links">
           <ul>
             <li class="m-3">
               <a href="#about-section">About</a>
             </li>
-  
+
             <li class="m-3">
-              <a href="">Resume</a>
+              <a href="#resume-section">Resume</a>
             </li>
-  
+
             <li class="m-3">
               <a href="">Projects</a>
             </li>
-  
+
             <li class="m-3">
               <a href="">Photography</a>
             </li>
@@ -49,73 +47,126 @@
       </nav>
     </header>
 
+    <section class="intro">
+      <div class="main-title">
+        <h1>Cristina Cruz</h1>
+      </div>
 
-      <section class="intro">
-        <div class="main-title">
-          <h1>Cristina Cruz</h1>
-        </div>
+      <div class="main-title">
+        <p>Developer</p>
+      </div>
 
-        <div class="main-title">
-          <p>Developer</p>
-        </div>
+      <div class="main-title">
+        <a href="#about-section"><i class="bi bi-chevron-down"></i></a>
+      </div>
+    </section>
 
-        <div class="main-title">
-          <i class="bi bi-chevron-double-down"></i>
-        </div>
-      </section>
-   
-
-    <section id="about-section">
+    <section id="about-section" class="sections">
       <h2 class="subtitle">About me</h2>
       <div id="introducing-text">
         <p>
           I am an enthusiastic developer with deep interest in the use of agile
           methodologies to accomplish needs of end-users in product's
-          development. I like to contribute to doing things better and useful. I graduated in Applied Mathematics and Computer Science and I have
-          over 2 years of experience. 
+          development. I like to contribute to doing things better and useful. I
+          graduated in Applied Mathematics and Computer Science and I have over
+          2 years of experience.
           <br />
-          Besides my passion for technology and science, I like getting to know new places
-          and taking photos.
+          Besides my passion for technology and science, I like getting to know
+          new places and taking photos.
         </p>
       </div>
     </section>
 
-    <section class="portfolio-sections"></section>
+    <div id="resume-title">
+      <h2>Resume</h2>
+    </div>
+    <section id="resume-section" class="sections">
+      <div class="container">
+        <div class="row jobs">
+          <div class="col-2">
+            <img
+              class="logos"
+              src="https://media.licdn.com/dms/image/C4D0BAQGGdfscIWeYNg/company-logo_200_200/0/1583831373751?e=2147483647&v=beta&t=nwr_NXQWFSD6OaTiZ2UX-R2yhAjvejETtNAxQy8HFbA"
+              alt="NFQ-Advisory"
+            />
+          </div>
+          <div class="col-10">
+            <h3 class="job-title">Associate</h3>
+            <p class="company">NFQ Advisory, Mexico City</p>
+            <p class="time-worked">November 2022- Present</p>
+            <p>
+              I have worked in the development of a trading calculator, this is
+              built in VueJS and Google Apps Script. Also I make unit testing in
+              Murex to evaluate the performance of workflows on events and
+              contracts.
+            </p>
+          </div>
+        </div>
 
-    <section>k</section>
+        <div class="row jobs mt-4">
+          <div class="col-2">
+            <img
+              class="logos"
+              src="https://unamenlinea.unam.mx/recursos/img/84307/unam-canada.jpg"
+              alt="UNAM"
+            />
+          </div>
+          <div class="col-10">
+            <h3 class="job-title">Intern in Management and development</h3>
+            <p class="company">UNAM-Canada, Gatineau, Quebec</p>
+            <p class="time-worked">September 2021-August 2022</p>
+            <p>
+              I developed a platform to visualize and manage headquarters
+              indicators. This was built with Laravel, HTML, CSS and JavaScript.
+              Also, I used Power Query to clean data and create Power BI
+              dashboards to visualize these indicators.
+            </p>
+          </div>
+        </div>
 
-    <section>k</section>
+        <div class="row jobs mt-4">
+          <div class="col-2">
+            <img
+              class="logos"
+              src="https://pbs.twimg.com/profile_images/1005222766310649861/ROeLoL-__400x400.jpg"
+              alt="Ibushak"
+            />
+          </div>
+          <div class="col-10">
+            <h3 class="job-title">Software Technical Documentation</h3>
+            <p class="company">Ibushak, Mexico City</p>
+            <p class="time-worked">May 2021-August 2021</p>
+            <p>
+              I worked with docsify, HTML and CSS to develop
+              a platform documentation.
+            </p>
+          </div>
+        </div>
 
-    <footer>k</footer>
+        <div class="row jobs mt-4">
+          <div class="col-2">
+            <img
+              class="logos"
+              src="https://media.licdn.com/dms/image/C560BAQGvHjuIR6Wvlg/company-logo_200_200/0/1670007955276?e=2147483647&v=beta&t=11dSXzHV_Z0isV-xWcmS-oVaEYpnJmkfq6iNsNtH4UI"
+              alt="Ibushak"
+            />
+          </div>
+          <div class="col-10">
+            <h3 class="job-title">Data Analytics Intern</h3>
+            <p class="company">AgileThought Mexico</p>
+            <p class="time-worked">February 2021- May 2021</p>
+            <p>
+              During my internship I learned about Python,
+              Power BI, Google Data Studio and Spark.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
 
-    <section>k</section>
+    <section></section>
 
-    <section>k</section>
-
-    <section>k</section>
-
-    <footer>k</footer>
-    <section>k</section>
-
-    <section>k</section>
-
-    <section>k</section>
-
-    <footer>k</footer>
-    <section>k</section>
-
-    <section>k</section>
-
-    <section>k</section>
-
-    <footer>k</footer>
-    <section>k</section>
-
-    <section>k</section>
-
-    <section>k</section>
-
-    <footer>k</footer>
+    <footer></footer>
 
     <script src="./index.js"></script>
   </body>
