skills added on about section

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </section>
 
     <section id="about-section" class="sections">
-      <h2 class="subtitle">About me</h2>
+      <h2 class="subtitle mb-4">About me</h2>
       <div id="introducing-text">
         <p>
           I am an enthusiastic developer with deep interest in the use of agile
@@ -75,12 +75,54 @@
           new places and taking photos.
         </p>
       </div>
+
+      <h2 class="mt-4 mb-4" id="skills">Relevant skills</h2>
+
+
+      <div class="container">
+
+        <div class="row d-flex justify-content-center">
+          <div class="col-3 skill-container">
+            <strong><p>Programming Languages and Frameworks</p></strong>
+              <ul>
+                <li>JavaScript</li>
+                <li>React</li>
+                <li>Laravel</li>
+                <li>Bootstrap</li>
+                <li>VueJS</li>
+                <li>Python</li>
+                <li>SQL</li>
+              </ul>
+          </div>
+
+          <div class="col-3 skill-container">
+            <strong><p>Technologies</p></strong>
+              <ul>
+                <li>Power BI</li>
+                <li>Google Data Studio</li>
+                <li>Canva</li>
+                <li>WordPress</li>
+                <li>Justinmind</li>
+                <li>Figma</li>
+              </ul>
+          </div>
+
+          <div class="col-3 skill-container">
+            <strong><p>Agile methodologies</p></strong>
+              <ul>
+                <li>SCRUM</li>
+                <li>Design Thinking</li>
+              </ul>
+          </div>
+        </div>
+      </div>
     </section>
 
     <div id="resume-title">
       <h2>Resume</h2>
     </div>
     <section id="resume-section" class="sections">
+      <h2 class="mb-4">Work experience</h2>
       <div class="container">
         <div class="row jobs">
           <div class="col-2">
