--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </li>
 
             <li class="m-3">
-              <a href="#resume-section">Resume</a>
+              <a href="#resume-title">Resume</a>
             </li>
 
             <li class="m-3">
@@ -76,43 +76,41 @@
         </p>
       </div>
 
-      <h2 class="mt-4 mb-4" id="skills">Relevant skills</h2>
-
+      <h2 class="my-4" id="skills">Relevant skills</h2>
 
       <div class="container">
-
         <div class="row d-flex justify-content-center">
           <div class="col-3 skill-container">
             <strong><p>Programming Languages and Frameworks</p></strong>
-              <ul>
-                <li>JavaScript</li>
-                <li>React</li>
-                <li>Laravel</li>
-                <li>Bootstrap</li>
-                <li>VueJS</li>
-                <li>Python</li>
-                <li>SQL</li>
-              </ul>
+            <ul>
+              <li>JavaScript</li>
+              <li>React</li>
+              <li>Laravel</li>
+              <li>Bootstrap</li>
+              <li>VueJS</li>
+              <li>Python</li>
+              <li>SQL</li>
+            </ul>
           </div>
 
           <div class="col-3 skill-container">
             <strong><p>Technologies</p></strong>
-              <ul>
-                <li>Power BI</li>
-                <li>Google Data Studio</li>
-                <li>Canva</li>
-                <li>WordPress</li>
-                <li>Justinmind</li>
-                <li>Figma</li>
-              </ul>
+            <ul>
+              <li>Power BI</li>
+              <li>Google Data Studio</li>
+              <li>Canva</li>
+              <li>WordPress</li>
+              <li>Justinmind</li>
+              <li>Figma</li>
+            </ul>
           </div>
 
           <div class="col-3 skill-container">
             <strong><p>Agile methodologies</p></strong>
-              <ul>
-                <li>SCRUM</li>
-                <li>Design Thinking</li>
-              </ul>
+            <ul>
+              <li>SCRUM</li>
+              <li>Design Thinking</li>
+            </ul>
           </div>
         </div>
       </div>
@@ -179,8 +177,8 @@
             <p class="company">Ibushak, Mexico City</p>
             <p class="time-worked">May 2021-August 2021</p>
             <p>
-              I worked with docsify, HTML and CSS to develop
-              a platform documentation.
+              I worked with docsify, HTML and CSS to develop a platform
+              documentation.
             </p>
           </div>
         </div>
@@ -198,9 +196,45 @@
             <p class="company">AgileThought Mexico</p>
             <p class="time-worked">February 2021- May 2021</p>
             <p>
-              During my internship I learned about Python,
-              Power BI, Google Data Studio and Spark.
+              During my internship I learned about Python, Power BI, Google Data
+              Studio and Spark.
             </p>
+          </div>
+        </div>
+      </div>
+
+      <h2 class="my-4">Education</h2>
+
+      <div class="container">
+        <div class="row jobs mt-4">
+          <div class="col-2">
+            <img
+              class="logos"
+              src="https://www.unam.mx/sites/default/files/images/unam.svg"
+              alt="UNAM"
+            />
+          </div>
+          <div class="col-10">
+            <h3 class="job-title">Universidad Nacional Autonóma de México</h3>
+            <p class="company">2017-2021</p>
+            <strong><p>BSc in Applied Mathematics and Computer Science</p></strong>
+          </div>
+
+          <div class="row mt-4">
+
+            <div class="col-2">
+              <img
+                class="logos"
+                src="https://images.credly.com/images/e281923e-ffdd-495b-92b3-122ed7eb7e76/blob.png"
+                alt="EBC"
+              />
+            </div>
+            <div class="col-10">
+              <h3 class="job-title">Escuela Bancaria y Comercial</h3>
+              <p class="company">Febraury 2021- August 2021</p>
+              <strong><p>Skillmaster Certification in Business</p></strong>
+            </div>
+  
           </div>
         </div>
       </div>
