projects section updated and project box

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </li>
 
             <li class="m-3">
-              <a href="">Projects</a>
+              <a href="#projects-title">Projects</a>
             </li>
 
             <li class="m-3">
@@ -217,7 +217,7 @@
           <div class="col-10">
             <h3 class="job-title">Universidad Nacional Autonóma de México</h3>
             <p class="company">2017-2021</p>
-            <strong><p>BSc in Applied Mathematics and Computer Science</p></strong>
+            <strong><p>Graduated with honors. <br>BSc in Applied Mathematics and Computer Science</p></strong>
           </div>
 
           <div class="row mt-4">
@@ -240,7 +240,57 @@
       </div>
     </section>
 
-    <section></section>
+    <div id="projects-title">
+      <h2>Porftolio</h2>
+    </div>
+
+    <section id="projects">
+
+      <div class="container">
+
+        <div class="row justify-content-md-center">
+          <div class="col project-box">
+            <div class="d-flex justify-content-center">
+              <img src="./assets/randomdogs.png" alt="">
+            </div>
+            <strong><p class="text-center mt-2 mb-1">Random</p></strong>
+            <p class="text-center">I use the dog API with JavaScript to load random dogs. Here you can choose your favorites and load yours to the favorites list.</p>
+            <p class="text-center"><a target="_blank" class="link-underline-info" href="https://cristinacrs.github.io/the-dog-api/">Check it here</a></p>
+          </div>
+  
+          <div class="col project-box">
+            <div class="d-flex justify-content-center">
+              <img src="./assets/googleclone.png" alt="">
+            </div>
+            <strong><p class="text-center mt-2 mb-1">Google Clone</p></strong>
+            <p class="text-center">A layout of Google search with HTML and CSS.</p>
+            <p class="text-center"><a target="_blank" class="link-underline-info" href="https://cristinacrs.github.io/google_clone/">Check it here</a></p>
+          </div>
+        </div>
+
+        <div class="row justify-content-md-center">
+          <div class="col project-box">
+            <div class="d-flex justify-content-center">
+              <img src="./assets/todoMachine.png" alt="">
+            </div>
+            <strong><p class="text-center mt-2 mb-1">Todo List</p></strong>
+            <p class="text-center">I used React.js to load, remove and complete task on a list.</p>
+            <p class="text-center"><a target="_blank" class="link-underline-info" href="https://cristinacrs.github.io/intro-react/">Check it here</a></p>
+          </div>
+
+          <div class="col project-box">
+            <div class="d-flex justify-content-center">
+              <img src="./assets/todoMachine.png" alt="">
+            </div>
+            <strong><p class="text-center mt-2 mb-1">Landing page</p></strong>
+            <p class="text-center">I used React.js to load, remove and complete task on a list.</p>
+            <p class="text-center"><a target="_blank" class="link-underline-info" href="https://cristinacrs.github.io/intro-react/">Check it here</a></p>
+          </div>
+        </div>
+
+      </div>
+
+    </section>
 
     <footer></footer>
 
