projects section updated

--- a/index.html
+++ b/index.html
@@ -280,11 +280,22 @@
 
           <div class="col project-box">
             <div class="d-flex justify-content-center">
-              <img src="./assets/todoMachine.png" alt="">
+              <img src="./assets/landingPage.png" alt="">
             </div>
             <strong><p class="text-center mt-2 mb-1">Landing page</p></strong>
-            <p class="text-center">I used React.js to load, remove and complete task on a list.</p>
-            <p class="text-center"><a target="_blank" class="link-underline-info" href="https://cristinacrs.github.io/intro-react/">Check it here</a></p>
+            <p class="text-center">Here I used Youtube API to show my favorite videos from my account.</p>
+            <p class="text-center"><a target="_blank" class="link-underline-info" href="https://cristinacrs.github.io/async-landing/">Check it here</a></p>
+          </div>
+        </div>
+
+        <div class="row justify-content-md-center">
+          <div class="col project-box">
+            <div class="d-flex justify-content-center">
+              <img id="homey" src="./assets/homey.png" alt="">
+            </div>
+            <strong><p class="text-center mt-2 mb-1">Homey</p></strong>
+            <p class="text-center">I used Figma to design Homey, a site where you can find a home to buy or rent.</p>
+            <p class="text-center"><a target="_blank" class="link-underline-info" href="https://drive.google.com/file/d/1T5WZQWUaShPlymD2q-AshETyaIGxSre_/view">Check it here</a></p>
           </div>
         </div>
 
