--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </li>
 
             <li class="m-3">
-              <a href="">Photography</a>
+              <a href="#photography-title">Photography</a>
             </li>
           </ul>
         </div>
@@ -298,6 +298,76 @@
             <p class="text-center"><a target="_blank" class="link-underline-info" href="https://drive.google.com/file/d/1T5WZQWUaShPlymD2q-AshETyaIGxSre_/view">Check it here</a></p>
           </div>
         </div>
+
+      </div>
+
+    </section>
+
+
+    <div id="photography-title">
+      <h2>Photography</h2>
+    </div>
+
+    <section id="photos">
+
+      <div class="container">
+
+        <div class="row">
+
+          <div class="col m-2 photo-box">
+            <div class="d-flex justify-content-center">
+              <img src="./assets/goose.jpg" alt="">
+            </div>
+          </div>
+
+          <div class="col m-2 photo-box">
+            <div class="d-flex justify-content-center">
+              <img src="./assets/moon.jpg" alt="">
+            </div>          
+          </div>
+
+          <div class="col m-2 photo-box">
+            <div class="d-flex justify-content-center">
+              <img src="./assets/sculture2.jpeg" alt="">
+            </div>
+          </div>
+
+          <div class="col m-2 photo-box">
+            <div class="d-flex justify-content-center">
+              <img src="./assets/city.jpg" alt="">
+            </div>          
+          </div>
+
+        </div>
+
+        <div class="row">
+
+          <div class="col m-2 photo-box">
+            <div class="d-flex justify-content-center">
+              <img src="./assets/rose.jpg" alt="">
+            </div>
+          </div>
+
+          <div class="col m-2 photo-box">
+            <div class="d-flex justify-content-center">
+              <img src="./assets/sculture.jpg" alt="">
+            </div>          
+          </div>
+
+          <div class="col m-2 photo-box">
+            <div class="d-flex justify-content-center">
+              <img src="./assets/snow.jpg" alt="">
+            </div>
+          </div>
+
+          <div class="col m-2 photo-box">
+            <div class="d-flex justify-content-center">
+              <img src="./assets/tulip.jpg" alt="">
+            </div>          
+          </div>
+
+        </div>
+
 
       </div>
 
