--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <p>Developer</p>
       </div>
 
-      <div class="main-title">
+      <div class="chevron d-flex justify-content-center">
         <a href="#about-section"><i class="bi bi-chevron-down"></i></a>
       </div>
     </section>
@@ -79,8 +79,8 @@
       <h2 class="my-4" id="skills">Relevant skills</h2>
 
       <div class="container">
-        <div class="row d-flex justify-content-center">
-          <div class="col-3 skill-container">
+        <div class="d-flex justify-content-center">
+          <div class="col-3 p-2 skill-container">
             <strong><p>Programming Languages and Frameworks</p></strong>
             <ul>
               <li>JavaScript</li>
@@ -93,7 +93,7 @@
             </ul>
           </div>
 
-          <div class="col-3 skill-container">
+          <div class="col-3 p-2 skill-container">
             <strong><p>Technologies</p></strong>
             <ul>
               <li>Power BI</li>
@@ -105,7 +105,7 @@
             </ul>
           </div>
 
-          <div class="col-3 skill-container">
+          <div class="col-3 p-2 skill-container">
             <strong><p>Agile methodologies</p></strong>
             <ul>
               <li>SCRUM</li>
@@ -340,7 +340,7 @@
 
         </div>
 
-        <div class="row">
+        <div class="row mb-5">
 
           <div class="col m-2 photo-box">
             <div class="d-flex justify-content-center">
@@ -373,7 +373,16 @@
 
     </section>
 
-    <footer></footer>
+    <footer>
+      <div class="container justify-content-between">
+        <div class="col">
+          <h3>Cris</h3>
+        </div>
+        <div class="col">
+          <h3>Logos</h3>
+        </div>
+      </div>
+    </footer>
 
     <script src="./index.js"></script>
   </body>
