--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <li class="m-3">
               <a href="#photography-title">Photography</a>
             </li>
+
           </ul>
         </div>
       </nav>
@@ -373,13 +374,16 @@
 
     </section>
 
-    <footer>
-      <div class="container justify-content-between">
-        <div class="col">
-          <h3>Cris</h3>
-        </div>
-        <div class="col">
-          <h3>Logos</h3>
+    <footer id="contact">
+      <div class="container p-2 ">
+        <div class="row">
+          <div class="col d-flex justify-content-start align-items-center">
+           <p class="text-light" >Cristina Cruz <i class="bi bi-c-circle"></i> 2023</p>
+          </div>
+          <div class="col d-flex justify-content-end align-items-center">
+            <a  target="_blank" href="https://github.com/cristinacrs"><h4><i class="m-2 bi bi-github icons-contact"></i></h4></a>
+            <a  target="_blank" href="https://www.linkedin.com/in/cristina-cruz-cortes"><h4><i class="m-2 bi bi-linkedin icons-contact"></i></h4></a>
+          </div>
         </div>
       </div>
     </footer>
