about section updated

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <p>
           I am an enthusiastic developer with deep interest in the use of agile
           methodologies to accomplish needs of end-users in product's
-          development. I like to contribute to doing things better and useful. I
+          development. I like to contribute to doing things better and useful. I am
           graduated in Applied Mathematics and Computer Science and I have over
           2 years of experience.
           <br />
