ebc icon updated

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             <div class="col-2">
               <img
                 class="logos"
-                src="https://images.credly.com/images/e281923e-ffdd-495b-92b3-122ed7eb7e76/blob.png"
+                src="https://www.ebc.mx/identidad/img/logo-ebc.png"
                 alt="EBC"
               />
             </div>
